--- a/style.css
+++ b/style.css
@@ -132,7 +132,6 @@ a{
     display: grid;
     place-items: center;
     font-size: 1.3vw;
-    /* font: 2vw system-ui; */
     text-decoration: none;
     text-align: center;
     text-transform: uppercase;
@@ -179,7 +178,7 @@ a{
     background-color: #625a2d;
     color: #F4E7DF;
     text-align: center;
-    width: 15vw;  /*make it 20 for smaller size  */
+    width: 15vw;  
     border-radius: 10px;
     font-weight: bold;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -551,10 +550,3 @@ a{
     }
 }
 
-/* Media Query  */
-@media screen {
-    
-}
-@media screen {
-    
-}
